2007-06-28  Rodrigo Moya <rodrigo@gnome-db.org>

	* libatomato/atomato.[ch]:
	* libatomato/atomato-action.c:
	* services/system/file_management.atomato: added description field.

	* src/main-window.c (main_window_init, populate_actions_model): show
	the list of actions in the library.

	* tests/test-list-actions.c (main): show more information for each
	action.

	* services/system/file_management.atomato: added more actions.

2007-06-28  Rodrigo Moya <rodrigo@gnome-db.org>

	* libatomato/atomato-action.c: new file to manage AtomatoAction's.

	* libatomato/atomato.c (initialize): read directories containing actions
	files.
	(atomato_list_actions, atomato_list_methods): implement.

	* services/Makefile.am:
	* services/system/Makefile.am:
	* services/system/file_management.atomato: added basic services.

2007-06-26  Rodrigo Moya <rodrigo@gnome-db.org>

	* configure.in:
	* Makefile.am:
	* src/Makefile.am:
	* src/atomato-gui.h
	* src/atomato-gui.glade:
	* src/gui.c:
	* src/main-window.c:
	* src/main.c: started GUI frontend.

2007-06-26  Rodrigo Moya <rodrigo@gnome-db.org>

	* libatomato/atomato.c (initialize): register the shell action provider.

2007-06-25  Rodrigo Moya <rodrigo@gnome-db.org>

	* libatomato/atomato.[ch]: added AtomatoMethod type.
	(atomato_list_methods): new function.

	* libatomato/atomato-action-provider.[ch]: removed list_actions method,
	we'll get the list of actions by reading custom Atomato XML.
	(atomato_action_provider_get_method): new method.
	(atomato_action_provider_run_action): changed arguments list.

	* libatomato/dbus-action-provider.c (dbus_action_provider_list_actions):
	removed not needed method.
	(dbus_action_provider_get_method): implemented new interface method.

	* libatomato/Makefile.am:
	* libatomato/shell-action-provider.c: let's start with the simplest
	action provider.

2007-03-21  Gintautas Miliauskas  <gintas@akl.lt>

	* configure.in: Added lt to ALL_LINGUAS.

2007-02-12  Pema Geyleg  <pema.geyleg@gmail.com>
