@@ -1,3 +1,3 @@
 actionsdir = $(datadir)/atomato/actions
 actions_DATA = 			\
-	system-file_management.atomato
+	desktop-session.atomato
