@@ -1,19 +1,19 @@
 <atomato>
 
   <action section="System"
-          name="ListFiles"
-	  description="List files"
+          name="CopyFiles"
+	  description="Copy files"
 	  method="shell"
-	  command="ls %1">
+	  command="cp %1 %2">
     <arguments>
     </arguments>
   </action>
 
   <action section="System"
-          name="CopyFiles"
-	  description="Copy files"
+          name="ListFiles"
+	  description="List files"
 	  method="shell"
-	  command="cp %1 %2">
+	  command="ls %1">
     <arguments>
     </arguments>
   </action>
